feat : changed CMakeLists + created the readme base

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,13 @@ cmake_minimum_required(VERSION 3.10)
 project(Raytracing)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(Raytracing src/ImageGen.cpp)
+include_directories(src/engine)
+
+add_executable(Raytracing
+        src/ImageGen.cpp
+        src/engine/Camera.cpp
+        src/engine/Renderer.cpp
+        src/engine/Scene.cpp
+)
