feat : added Scene example + added methods to Scene

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,6 @@ add_executable(Raytracing
         src/engine/Renderer.cpp
         src/engine/scenes/Scene.cpp
         src/engine/Vector.cpp
+        src/engine/scenes/Scene1.cpp
+        src/engine/scenes/Scene1.h
 )
