feat : added some Shapes + added Intersection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,10 @@ add_executable(Raytracing
         src/engine/scenes/Scene.cpp
         src/engine/Vector.cpp
         src/engine/scenes/Scene1.cpp
+        src/engine/shapes/Shape.cpp
+        src/engine/shapes/Shape.h
+        src/engine/shapes/Sphere.cpp
+        src/engine/shapes/Sphere.h
+        src/engine/Intersection.cpp
+        src/engine/Intersection.h
 )
