--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,8 +41,8 @@ set(IMGUI_SOURCES
         src/engine/shapes/Triangle.h
         src/engine/shapes/OBJ.cpp
         src/engine/shapes/OBJ.h
-        src/gui/ImGuiRenderer.cpp
-        src/gui/ImGuiRenderer.h
+        src/gui/Application.cpp
+        src/gui/Application.h
 )
 
 add_executable(Raytracing
@@ -60,8 +60,22 @@ add_executable(Raytracing
     src/engine/Intersection.h
     src/engine/shapes/Plane.cpp
     src/engine/shapes/Plane.h
-    src/gui/ImGuiRenderer.cpp
-    src/gui/ImGuiRenderer.h
+    src/gui/Application.cpp
+    src/gui/Application.h
+    src/gui/UIManager.cpp
+    src/gui/UIManager.h
+    src/gui/windows/MainViewport.cpp
+    src/gui/windows/MainViewport.h
+    src/gui/windows/ResolutionWindow.cpp
+    src/gui/windows/ResolutionWindow.h
+    src/gui/windows/StatisticsWindow.cpp
+    src/gui/windows/StatisticsWindow.h
+    src/gui/windows/UiWindow.cpp
+    src/gui/windows/UiWindow.h
+    src/gui/Window.cpp
+    src/gui/Window.h
+    src/gui/InputManager.cpp
+    src/gui/InputManager.h
     ${IMGUI_SOURCES}
 )
 
