feat : added lights

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,6 +99,7 @@ add_executable(Raytracing
         src/engine/shapes/GPUShapeData.h
         src/engine/scenes/SceneGPU.cpp
         src/engine/scenes/SceneGPU.h
+        src/engine/GPULight.h
 
 )
 
