feat : added bvh to the shader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,7 @@ add_executable(Raytracing
         src/engine/scenes/SceneGPU.h
         src/engine/GPULightSource.h
         src/engine/GPUMaterial.h
+        src/engine/acceleration/GPUBVHNode.h
 
 )
 
