feat : added inspector but we can't click inside

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,8 @@ set(IMGUI_SOURCES
         src/preferences/PreferenceManager.cpp
         src/preferences/PreferenceManager.h
         external/json.hpp
+        src/gui/windows/InspectorWindow.cpp
+        src/gui/windows/InspectorWindow.h
 )
 
 add_executable(Raytracing
